{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 35,
  "lineage": "8f0a4717-51a0-3f0e-2fef-df10e82982eb",
  "resources": [
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:vpc/vpc-022825c867f7cbafe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f4da2148f9fda783",
            "default_route_table_id": "rtb-0a948cfc8102aff37",
            "default_security_group_id": "sg-06cef5f8902cef5e6",
            "dhcp_options_id": "dopt-04204db85e9f45ce0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-022825c867f7cbafe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a948cfc8102aff37",
            "owner_id": "202533496137",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:202533496137:instance/i-0114f25055a4fc3b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0114f25055a4fc3b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c7c41dc1596c3f8",
            "private_dns": "ip-172-31-23-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.178",
            "public_dns": "ec2-98-80-12-64.compute-1.amazonaws.com",
            "public_ip": "98.80.12.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ac740be5b3c168e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed4b58b3716f2c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8b6667b0f078aac"
            ]
          },
          "dependencies": [
            "module.dev_infra.aws_default_vpc.my_vpc",
            "module.dev_infra.aws_key_pair.my_key",
            "module.dev_infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:security-group/sg-0c8b6667b0f078aac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b6667b0f078aac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "202533496137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022825c867f7cbafe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra.aws_default_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:vpc/vpc-022825c867f7cbafe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f4da2148f9fda783",
            "default_route_table_id": "rtb-0a948cfc8102aff37",
            "default_security_group_id": "sg-06cef5f8902cef5e6",
            "dhcp_options_id": "dopt-04204db85e9f45ce0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-022825c867f7cbafe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a948cfc8102aff37",
            "owner_id": "202533496137",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.prd_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:202533496137:instance/i-07f99d458d9e44b9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f99d458d9e44b9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prd-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067aa1898228febf8",
            "private_dns": "ip-172-31-22-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.37",
            "public_dns": "ec2-3-80-61-153.compute-1.amazonaws.com",
            "public_ip": "3.80.61.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ffa014d0e5bfb80",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed4b58b3716f2c",
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e127410bd9f10a8"
            ]
          },
          "dependencies": [
            "module.prd_infra.aws_default_vpc.my_vpc",
            "module.prd_infra.aws_key_pair.my_key",
            "module.prd_infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:202533496137:instance/i-05f53f7bdf7b2c68c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f53f7bdf7b2c68c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prd-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067c2851577dfbbe7",
            "private_dns": "ip-172-31-21-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.203",
            "public_dns": "ec2-54-163-67-172.compute-1.amazonaws.com",
            "public_ip": "54.163.67.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08bd01329ef4173c4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed4b58b3716f2c",
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e127410bd9f10a8"
            ]
          },
          "dependencies": [
            "module.prd_infra.aws_default_vpc.my_vpc",
            "module.prd_infra.aws_key_pair.my_key",
            "module.prd_infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prd_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:security-group/sg-08e127410bd9f10a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e127410bd9f10a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prd-infra-app-sg",
            "name_prefix": "",
            "owner_id": "202533496137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022825c867f7cbafe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prd_infra.aws_default_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:vpc/vpc-022825c867f7cbafe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f4da2148f9fda783",
            "default_route_table_id": "rtb-0a948cfc8102aff37",
            "default_security_group_id": "sg-06cef5f8902cef5e6",
            "dhcp_options_id": "dopt-04204db85e9f45ce0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-022825c867f7cbafe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a948cfc8102aff37",
            "owner_id": "202533496137",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.stg_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:202533496137:instance/i-03fed77938fbd1d08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fed77938fbd1d08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d83dd3de70b6435",
            "private_dns": "ip-172-31-22-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.7",
            "public_dns": "ec2-3-90-218-47.compute-1.amazonaws.com",
            "public_ip": "3.90.218.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09cac8043228ee551",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed4b58b3716f2c",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0617c031cbf682475"
            ]
          },
          "dependencies": [
            "module.stg_infra.aws_default_vpc.my_vpc",
            "module.stg_infra.aws_key_pair.my_key",
            "module.stg_infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:202533496137:instance/i-05db75e36dce4a9ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05db75e36dce4a9ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054666d201cf3d480",
            "private_dns": "ip-172-31-17-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.196",
            "public_dns": "ec2-54-163-195-142.compute-1.amazonaws.com",
            "public_ip": "54.163.195.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bfc676c8bc705f21",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed4b58b3716f2c",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0617c031cbf682475"
            ]
          },
          "dependencies": [
            "module.stg_infra.aws_default_vpc.my_vpc",
            "module.stg_infra.aws_key_pair.my_key",
            "module.stg_infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.stg_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533496137:security-group/sg-0617c031cbf682475",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound open",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0617c031cbf682475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "202533496137",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022825c867f7cbafe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stg_infra.aws_default_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}